preparing version 26: major changes, activated new scalable architecture